--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -12,9 +12,30 @@
     border-radius: 1px 1px;
 }
 
-#modal-backdrop{
+#modalBackdrop{
     @extend %bounding-box;
     background-color: $background-color2;
+    background-color: $gridbox-color-on;
+    z-index: 10;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.modal-container{
+    @extend %flex_box;
+    color: #fff;
+    align-items: center;
+    justify-self: center;
+    position: fixed;
+    right: 40%;
+    top: 30%;
+    z-index: 110;
+    background-color: $background-color1;
+    border-radius: 10px;
+    padding: $text-size * 0.5;
 }
 
 
@@ -29,6 +50,7 @@
     color: $off-text-color1;
     background-color: $background-color3;
     border-radius: 15px;
+    z-index: 100;
 }
 
 .addButton:hover{
@@ -65,23 +87,15 @@
     }
 }
 
-#modalBackdrop {
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.85);
+.modal-dialogue{
+    font-family: $text-font;
+    font-size: $text-size;
 }
 
-#addModal{
-    color: #fff;
-    justify-self: center;
-    position: fixed;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: 1010;
+h3{
+    font-size: 1.5 * $text-size;
+}
+
+.hidden{ /* Required due to flext box overwrite */
+    display: none;
 }
