modified:   sass/calendar.scss 	modified:   views/calendar_app.handlebars 	modified:   views/layouts/main.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,6 +45,8 @@
     
     {{{body}}}
 
+    {{> modal}}
+
     <!-- Credits -->
     <footer>
         <span class="authors">Alexander Guyer</span>
