--- a/sass/calendar.scss
+++ b/sass/calendar.scss
@@ -14,10 +14,7 @@
 /* App Container and Unordered lists*/
 
 .container{
-    @extend %flex_box;
-    min-width: 1400px;
-    min-height: 1000px;
-    max-width: 100%;
+    @extend %main_container;
     margin: 0px 20px;
     padding: 0px;
 
@@ -42,7 +39,7 @@
 
 .list-day{
     display: inline-block;
-    width: 32px;
+    min-width: 32px;
 }
 
 #daylist{
