--- a/views/partials/time_list.handlebars
+++ b/views/partials/time_list.handlebars
@@ -1,5 +1,5 @@
 <!-- Time Column html template -->
-<div class="times-container times col">
+<div class="initial-slot times-container times col">
     <ul class="tiny times" id="time-list">
     {{#each times}}
         <li><span class="time-text">{{time}}</span>
