final scss changes

--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -9,7 +9,7 @@ $header-font: Arial, Helvetica, san-serif;
 $mono: 'Courier New', Courier, monospace;
 $main-color: #230523;
 $header-color: #FFFFFF;
-$off-text-color:  #e47637;
+$off-text-color:  black;
 $off-text-color1: #a6b9db;
 $off-text-color1-highlight: #b6c9eb;
 $border-color: #5f2a5f;
