--- a/sass/modal.scss
+++ b/sass/modal.scss
@@ -111,7 +111,7 @@
 }
 
 h3{
-    background-color: $background-color-shade;
+    //background-color: $background-color-shade;
     border-radius: 15px;
     font-size: 2.25 * $text-size;
     font-family: $header-font;
@@ -161,7 +161,10 @@ h3{
 
 .modal-sub{
     @extend %modal-button;
+    background-color: transparent;
     display: inline-flex;
+    border: 0.5px solid black;
+    padding: 0px 5px;
 }
 
 .modal-sub:hover{
